--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap');
+
+#root {
+    --maroon: #A5243D;
+    --babyblue: #CEE0DC;
+    --lightpurp: #AFAAB9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.App {padding: 20px;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.logo {text-align: left; font-size: 300%; width: 100%; margin: 10px auto; font-family: 'Major Mono Display', monospace;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.logo span {color: var(--maroon);}
 
-.App-link {
-  color: #61dafb;
-}
+nav {padding: 5px; background-color: var(--babyblue); display: flex; justify-content: space-around; flex-wrap: wrap;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav Link, nav a {color: black; padding: 10px; text-transform: uppercase; font-size: 150%;
+    text-decoration: none; transition: background-color .4s, color .4s;}
+
+nav Link:hover, nav a:hover{background-color: var(--lightpurp); color: var(--maroon);}
+
+
+footer {text-align: center; text-transform: uppercase; font-weight: 900; margin: 20px;}
+
+@media only screen and (max-width: 400px) {
+ .logo {font-size: 200%; text-align: center;}
 }
