--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css?family=Manjari|Staatliches&display=swap');
+
+body {font-family: 'Manjari', sans-serif;}
+
+h1,h2,h3,h4,h5,h6, a, Link {font-family: 'Staatliches', cursive;}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
