--- a/src/components/topic.css
+++ b/src/components/topic.css
@@ -1,4 +1,4 @@
-.topic {max-width: 350px; padding: 10px; margin: 10px; text-align: center; background-color: var(--lightpurp);
-    height: 475px;}
+.topic {width: 300px; padding: 10px; margin: 10px; text-align: center; background-color: var(--lightpurp);
+    height: 380px;}
 
-.topic img {max-width: 300px; text-align: center;}
+.topic img {width: 200px; height: 200px; text-align: center; object-fit: cover;}
